--- a/index.html
+++ b/index.html
@@ -4,22 +4,71 @@
     <meta charset="UTF-8">
     <title>Loadcount Privacy Policy</title>
     <style>
-        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 40px; color: #2c3e50; max-width: 900px; }
-        h1, h2, h3 { color: #2c3e50; margin-top: 1.2em; }
-        ul { margin-left: 20px; }
-        a { color: #3498db; text-decoration: none; }
-        a:hover { text-decoration: underline; }
-        p { margin: 0.8em 0; }
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.8;
+            margin: 40px auto;
+            color: #2c3e50;
+            max-width: 900px;
+            background-color: #fdfdfd;
+        }
+        h1 {
+            font-size: 2em;
+            margin-bottom: 0.5em;
+        }
+        h2 {
+            font-size: 1.6em;
+            margin-top: 2em;
+            margin-bottom: 0.5em;
+            border-bottom: 2px solid #ddd;
+            padding-bottom: 0.3em;
+        }
+        h3 {
+            font-size: 1.3em;
+            margin-top: 1.2em;
+            margin-bottom: 0.3em;
+        }
+        p {
+            margin: 0.8em 0;
+        }
+        ul {
+            margin-left: 20px;
+            margin-bottom: 1em;
+        }
+        a {
+            color: #3498db;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
     <h1>Loadcount Privacy Policy</h1>
     <p>Last Updated: 15 December 2025</p>
 
-    <h2>1. Introduction</h2>
+    <h2>Table of Contents</h2>
+    <ul>
+        <li><a href="#introduction">1. Introduction</a></li>
+        <li><a href="#information">2. Information We Collect</a></li>
+        <li><a href="#usage">3. How We Use Your Information</a></li>
+        <li><a href="#storage">4. Data Storage</a></li>
+        <li><a href="#third-party">5. Third-Party Services</a></li>
+        <li><a href="#location">6. Location Data Details</a></li>
+        <li><a href="#sharing">7. Data Sharing and Disclosure</a></li>
+        <li><a href="#rights">8. Your Rights and Choices</a></li>
+        <li><a href="#security">9. Data Security</a></li>
+        <li><a href="#children">10. Children’s Privacy</a></li>
+        <li><a href="#international">11. International Users</a></li>
+        <li><a href="#changes">12. Changes to This Privacy Policy</a></li>
+        <li><a href="#contact">13. Contact Us</a></li>
+    </ul>
+
+    <h2 id="introduction">1. Introduction</h2>
     <p>This Privacy Policy describes how Loadcounter (“we,” “our,” or “the app”) collects, uses, and protects information when you use our mobile application. We are committed to protecting your privacy and being transparent about our data practices.</p>
 
-    <h2>2. Information We Collect</h2>
+    <h2 id="information">2. Information We Collect</h2>
 
     <h3>2.1 Location Data</h3>
     <ul>
@@ -56,26 +105,28 @@
         <li>Contacts, photos, or other device files</li>
     </ul>
 
-    <h2>3. How We Use Your Information</h2>
+    <h2 id="usage">3. How We Use Your Information</h2>
+
     <h3>3.1 Core Functionality</h3>
     <ul>
-        <li>Geofencing: Automatically detect entry and exit from collection zones</li>
-        <li>Automatic Load Counting: Increment load counts after exiting a zone following a stationary period</li>
-        <li>Job Tracking: Store and display job history, load counts, and work statistics</li>
-        <li>Map Display: Show your location and collection points on interactive maps</li>
-        <li>Time Tracking: Calculate idle and motion time using GPS movement</li>
+        <li>Geofencing: Automatically detect entry and exit from collection zones.</li>
+        <li>Automatic Load Counting: Increment load counts after exiting a zone following a stationary period.</li>
+        <li>Job Tracking: Store and display job history, load counts, and work statistics.</li>
+        <li>Map Display: Show your location and collection points on interactive maps.</li>
+        <li>Time Tracking: Calculate idle and motion time using GPS movement.</li>
     </ul>
 
     <h3>3.2 App Features</h3>
     <ul>
-        <li>Remember UI and theme preferences</li>
-        <li>Store jobs and geofences locally on your device</li>
-        <li>Generate PDF job reports for export or sharing</li>
+        <li>Remember UI and theme preferences.</li>
+        <li>Store jobs and geofences locally on your device.</li>
+        <li>Generate PDF job reports for export or sharing.</li>
     </ul>
 
-    <h2>4. Data Storage</h2>
+    <h2 id="storage">4. Data Storage</h2>
+
     <h3>4.1 Local-Only Storage</h3>
-    <p>All data is stored locally on your device using Android’s local storage mechanisms. No cloud storage, external servers, or account syncing. Your data remains on your device until you:</p>
+    <p>All data is stored locally on your device using Android’s local storage mechanisms. There is no cloud storage, external servers, or account syncing. Your data remains on your device until you:</p>
     <ul>
         <li>Delete the app</li>
         <li>Delete jobs or geofences within the app</li>
@@ -85,12 +136,12 @@
     <h3>4.2 Data Ownership</h3>
     <p>You fully own and control your data. You may export job data as PDF files or delete any stored information at any time.</p>
 
-    <h2>5. Third-Party Services</h2>
+    <h2 id="third-party">5. Third-Party Services</h2>
+
     <h3>5.1 Google Maps</h3>
     <p>Purpose: Interactive maps and location rendering<br>
        Data Shared: Location coordinates and geofence markers<br>
-       Privacy Policy: <a href="https://policies.google.com/privacy">https://policies.google.com/privacy</a>
-    </p>
+       Privacy Policy: <a href="https://policies.google.com/privacy">https://policies.google.com/privacy</a></p>
 
     <h3>5.2 Google Mobile Ads (AdMob)</h3>
     <p>Purpose: Display advertisements (unless ad removal is purchased)</p>
@@ -99,51 +150,51 @@
         <li>Advertising ID</li>
         <li>App usage data</li>
     </ul>
-    <p>We do not have access to or control over data collected directly by Google AdMob. Ad removal can be purchased permanently. Privacy Policy: <a href="https://policies.google.com/privacy">https://policies.google.com/privacy</a></p>
+    <p>We do not have access to or control over data collected directly by Google AdMob. Ad removal can be purchased permanently.<br>
+       Privacy Policy: <a href="https://policies.google.com/privacy">https://policies.google.com/privacy</a>
+    </p>
 
     <h3>5.3 Google Play Services</h3>
     <p>Purpose: Process in-app purchases<br>
        Data Shared: Purchase confirmation and transaction IDs<br>
-       Privacy Policy: <a href="https://policies.google.com/privacy">https://policies.google.com/privacy</a>
-    </p>
+       Privacy Policy: <a href="https://policies.google.com/privacy">https://policies.google.com/privacy</a></p>
 
     <h3>5.4 Firebase Crashlytics</h3>
     <p>Purpose: Monitor app stability and diagnose crashes<br>
        Data Collected: Anonymous crash reports, device model, OS version<br>
        Personal Data: No personally identifiable information is collected<br>
-       Privacy Policy: <a href="https://policies.google.com/privacy">https://policies.google.com/privacy</a>
-    </p>
+       Privacy Policy: <a href="https://policies.google.com/privacy">https://policies.google.com/privacy</a></p>
 
-    <h2>6. Location Data Details</h2>
+    <h2 id="location">6. Location Data Details</h2>
     <p>Background location is essential to the app’s core functionality. Users may revoke permissions at any time, which will disable geofencing features.</p>
 
-    <h2>7. Data Sharing and Disclosure</h2>
+    <h2 id="sharing">7. Data Sharing and Disclosure</h2>
     <p>No sale of data. Limited sharing only with Google services (Maps, AdMob, Play Services). Legal disclosures only if required.</p>
 
-    <h2>8. Your Rights and Choices</h2>
+    <h2 id="rights">8. Your Rights and Choices</h2>
     <ul>
-        <li>Grant/revoke location access</li>
-        <li>View job and geofence data</li>
-        <li>Delete data or ads permanently</li>
+        <li>Grant or revoke location access at any time</li>
+        <li>View all job and geofence data</li>
+        <li>Delete individual or all app data</li>
+        <li>Remove ads permanently via in-app purchase</li>
     </ul>
 
-    <h2>9. Data Security</h2>
-    <p>All data is stored locally. You are responsible for device security.</p>
+    <h2 id="security">9. Data Security</h2>
+    <p>All data is stored locally. You are responsible for maintaining the security of your device.</p>
 
-    <h2>10. Children’s Privacy</h2>
+    <h2 id="children">10. Children’s Privacy</h2>
     <p>Not intended for children under 13. We do not knowingly collect data from children.</p>
 
-    <h2>11. International Users</h2>
-    <p>App operated from New Zealand. Data is stored locally regardless of location.</p>
+    <h2 id="international">11. International Users</h2>
+    <p>The app is operated from New Zealand. All data is stored locally on your device regardless of location.</p>
 
-    <h2>12. Changes to This Privacy Policy</h2>
-    <p>Updates will be reflected by the “Last Updated” date. Continued use constitutes acceptance.</p>
+    <h2 id="changes">12. Changes to This Privacy Policy</h2>
+    <p>Updates will be reflected by the “Last Updated” date. Continued use of the app constitutes acceptance of the updated policy.</p>
 
-    <h2>13. Contact Us</h2>
+    <h2 id="contact">13. Contact Us</h2>
     <p>Email: <a href="mailto:fan030163@gmail.com">fan030163@gmail.com</a><br>
        App Name: Loadcounter<br>
-       Version: 1.0.1+45
-    </p>
+       Version: 1.0.1+45</p>
 
 </body>
 </html>
